[gd_scene load_steps=3 format=3 uid="uid://b6hp658svoet5"]

[ext_resource type="Script" path="res://InteractiveContainer.gd" id="1_pqnhl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnldn"]

[node name="InteractiveContainer" type="Area2D"]
script = ExtResource("1_pqnhl")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cnldn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
